Elaborating more on the discovery and preview of the procesing result

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -928,7 +928,15 @@
    "id": "widespread-officer",
    "metadata": {},
    "source": [
-    "In this part of the demo, Eric will use the workspace resource catalogue endpoint to discover processing outputs and applications.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
+    "In this part of the demo, Eric will use the workspace resource catalogue endpoint to discover processing output.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6320d23a-3a33-4dc8-91d3-01d2103d623a",
+   "metadata": {},
+   "source": [
+    "Eric uses his workspace catalogue to list all records identifier, type and title"
    ]
   },
   {
@@ -956,14 +964,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ee982ec-05b0-45a6-8645-cbac0e9fa848",
+   "metadata": {},
+   "source": [
+    "Eric discovers the identifier of the processing output (here the output identifier is the same as the input data). Then Eric discovers the WMS link of the processing result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bronze-scholarship",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO [Angelos] - need to select the correct scene-id output from the processing - from the json file in the results\n",
-    "scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737'\n",
+    "scene_id=csw.records[rec].identifier\n",
     "csw.getrecordbyid(id=[scene_id])\n",
     "links = csw.records[scene_id].references\n",
     "csw.records[scene_id].references\n",
@@ -973,6 +988,14 @@
     "    if 'WMS' in scheme:\n",
     "        wms_endpoint=link['url']\n",
     "        print(link['url'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb6f94c2-985f-41a5-b483-6b3bc26ce7df",
+   "metadata": {},
+   "source": [
+    "Eric then lists the WMS layer names that are available from the View Service as well as the bounding box of the layer"
    ]
   },
   {
@@ -997,13 +1020,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09765a02-0cd5-42b1-91f7-40b2f4271d3a",
+   "metadata": {},
+   "source": [
+    "Finally, Eric can preview the processing result with a getmap request"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "increasing-sierra",
    "metadata": {},
    "outputs": [],
    "source": [
-    "getMap(wms,'INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
+    "get_map(wms,scene_id,(13.8,36.9,15.1,37.9), 'rgb.png')\n",
     "image1 = mpimg.imread('rgb.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
     "img1 = plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
