Update for user 'bob'

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -563,9 +563,6 @@
    "execution_count": null,
    "id": "stupid-georgia",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -792,6 +789,7 @@
     "workspace_name = \"rm-user-\" + USER_NAME.lower()\n",
     "response, workspace_access_token = demo.workspace_get_details(workspace_url, workspace_name, id_token=user_id_token, access_token=workspace_access_token)\n",
     "workspace_details = response.json()\n",
+    "demo.response_summary(response)\n",
     "\n",
     "# Bucket details\n",
     "bucket_name = workspace_details[\"storage\"][\"credentials\"][\"bucketname\"]\n",
@@ -1118,7 +1116,7 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as user 'bob' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_BOB=\"demoa\"\n",
+    "USER_BOB=\"bob\"\n",
     "USER_BOB_PASSWORD=\"defaultPWD\"\n",
     "bob_id_token = demo.get_id_token(USER_BOB, USER_BOB_PASSWORD)"
    ]
