EOEPCA-289 refactor workspace prefix as a variable

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -59,7 +59,9 @@
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
     "#base_domain = \"185.52.193.87.nip.io\"\n",
+    "#workspace_prefix = \"rm-user-\"\n",
     "base_domain = \"demo.eoepca.org\"\n",
+    "workspace_prefix = \"demo-user\"\n",
     "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
     "demo.register_client()\n",
     "demo.save_state()"
@@ -133,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alice_workspace_endpoint = f'https://resource-catalogue.demo-user-alice.{base_domain}'\n",
+    "alice_workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-alice.{base_domain}'\n",
     "csw = CatalogueServiceWeb(alice_workspace_endpoint,timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "print(\"Alice's workspace records:\\n\")\n",
@@ -641,7 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# atom_dataset_url = \"https://resource-catalogue.demo.eoepca.org/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE\"\n",
+    "# atom_dataset_url = f\"https://resource-catalogue.{base_domain}/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE\"\n",
     "os.system(f'../data/create-execute-body.sh \"{atom_dataset_url}\"')\n",
     "!cat ../data/app-execute-body.json"
    ]
@@ -787,7 +789,7 @@
     "workspace_access_token = None\n",
     "\n",
     "# Workspace - Get Details\n",
-    "workspace_name = \"demo-user-\" + USER_NAME.lower()\n",
+    "workspace_name = f\"{workspace_prefix}-{USER_NAME.lower()}\"\n",
     "response, workspace_access_token = demo.workspace_get_details(workspace_url, workspace_name, id_token=user_id_token, access_token=workspace_access_token)\n",
     "workspace_details = response.json()\n",
     "demo.response_summary(response)\n",
@@ -945,7 +947,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workspace_endpoint = f'https://resource-catalogue.demo-user-{USER_NAME}.{base_domain}'\n",
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_NAME}.{base_domain}'\n",
     "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
