EOEPCA-289 small tweaks

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "source": [
     "# Demonstration\n",
-    "End-to-end demonstration.<br>\n",
-    "Ref. https://docs.google.com/document/d/1opi0xGTaMZC0TA2CF2VF1DrWHXeE6M-89ricwlsXtXg/edit?usp=sharing"
+    "End-to-end demonstration."
    ]
   },
   {
@@ -59,7 +58,7 @@
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
     "#base_domain = \"185.52.193.87.nip.io\"\n",
-    "#workspace_prefix = \"rm-user-\"\n",
+    "#workspace_prefix = \"rm-user\"\n",
     "base_domain = \"demo.eoepca.org\"\n",
     "workspace_prefix = \"demo-user\"\n",
     "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
