Adding WMS style parameter

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -452,9 +452,10 @@
     "import matplotlib.image as mpimg\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def get_map(wms, layer_name, bbox, filename):\n",
+    "def get_map(wms, layer_name, bbox, filename, style=''):\n",
     "    wms.getOperationByName('GetMap').formatOptions\n",
     "    img = wms.getmap(layers=[layer_name],\n",
+    "                     styles=[style],\n",
     "                     size=(600,300),\n",
     "                     srs='EPSG:4326',\n",
     "                     bbox=bbox,\n",
@@ -1020,6 +1021,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ade0ab6e-5294-4a38-b8db-97fe1b18ced0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wms[scene_id].styles"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "09765a02-0cd5-42b1-91f7-40b2f4271d3a",
    "metadata": {},
@@ -1034,7 +1045,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_map(wms,scene_id,(13.8,36.9,15.1,37.9), 'rgb.png')\n",
+    "get_map(wms,scene_id,(13.8,36.9,15.1,37.9), 'rgb.png',style='viridis')\n",
     "image1 = mpimg.imread('rgb.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
     "img1 = plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
