Fixed wrongly escaped quotes

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -1247,7 +1247,7 @@
    "outputs": [],
    "source": [
     "# Each resource has a unique identifier\n",
-    "application_resource_id = demo.get_resource_by_uri(ades_resources_endpoint, "/"+USER_NAME+"/wps3/processes/"+application_name, user_id_token)\n",
+    "application_resource_id = demo.get_resource_by_uri(ades_resources_endpoint, \"/\"+USER_NAME+\"/wps3/processes/\"+application_name, user_id_token)\n",
     "print(f\"ID for resource '{application_name}' of user {USER_NAME} => {application_resource_id}\")"
    ]
   },
