EOEPCA-289 updated fn reset_resource_policy() to use resource URI instead of name

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -948,6 +948,7 @@
    "outputs": [],
    "source": [
     "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_NAME}.{base_domain}'\n",
+    "print(f\"Eric's workspace (catalogue): {workspace_endpoint}\")\n",
     "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
@@ -1106,7 +1107,8 @@
    "outputs": [],
    "source": [
     "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl.json\", id_token=user_id_token, access_token=ades_access_token)\n",
-    "demo.reset_resource_policy(ades_resources_endpoint, pdp_url, user_id_token, application_name) # due to previous runs of the demo"
+    "application_uri = f\"/{USER_NAME}/wps3/processes/{application_name}\"\n",
+    "demo.reset_resource_policy(ades_resources_endpoint, pdp_url, user_id_token, application_uri) # due to previous runs of the demo"
    ]
   },
   {
@@ -1258,8 +1260,8 @@
    "outputs": [],
    "source": [
     "# Each resource has a unique identifier\n",
-    "application_resource_id = demo.get_resource_by_uri(ades_resources_endpoint, \"/\"+USER_NAME+\"/wps3/processes/\"+application_name, user_id_token)\n",
-    "print(f\"ID for resource '{application_name}' of user {USER_NAME} => {application_resource_id}\")"
+    "application_resource_id = demo.get_resource_by_uri(ades_resources_endpoint, application_uri, user_id_token)\n",
+    "print(f\"ID for resource '{application_uri}' of user {USER_NAME} => {application_resource_id}\")"
    ]
   },
   {
