EOEPCA-289 updated var names to better distinguish between users

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -90,9 +90,9 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as user 'eric' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"eric\"\n",
-    "USER_PASSWORD=\"defaultPWD\"\n",
-    "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
+    "USER_ERIC=\"eric\"\n",
+    "USER_ERIC_PASSWORD=\"defaultPWD\"\n",
+    "eric_id_token = demo.get_id_token(USER_ERIC, USER_ERIC_PASSWORD)"
    ]
   },
   {
@@ -473,7 +473,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_map(wms,f'{selected_record}__TRUE_COLOR',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
+    "layer = \"__TRUE_COLOR\"\n",
+    "get_map(wms,f'{selected_record}{layer}',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
     "image1 = mpimg.imread('rgb.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
     "img1 = plt.imshow(image1, extent=[13.8,15.1,36.9,37.9], aspect='auto')\n",
@@ -500,10 +501,10 @@
    "source": [
     "# ADES URLs\n",
     "ades_base_url = f\"http://ades.test.{base_domain}\"\n",
-    "ades_wps_url = f\"{ades_base_url}/{USER_NAME}/zoo\"\n",
+    "ades_wps_url = f\"{ades_base_url}/{USER_ERIC}/zoo\"\n",
     "print(\"ADES WPS endpoint:\", ades_wps_url)\n",
     "\n",
-    "ades_proc_url = f\"{ades_base_url}/{USER_NAME}/wps3\"\n",
+    "ades_proc_url = f\"{ades_base_url}/{USER_ERIC}/wps3\"\n",
     "print(\"ADES API Processes endpoint:\", ades_proc_url)\n",
     "\n",
     "# Init\n",
@@ -530,7 +531,7 @@
    "outputs": [],
    "source": [
     "# API Processes - List Processes\n",
-    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=eric_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)\n",
     "# demo.response_summary(response)"
    ]
@@ -571,7 +572,7 @@
    "outputs": [],
    "source": [
     "# API Processes - Deploy Application\n",
-    "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl.json\", id_token=user_id_token, access_token=ades_access_token)"
+    "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl.json\", id_token=eric_id_token, access_token=ades_access_token)"
    ]
   },
   {
@@ -594,7 +595,7 @@
    "outputs": [],
    "source": [
     "# Check deploy - list processes again\n",
-    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=eric_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)"
    ]
   },
@@ -617,7 +618,7 @@
    "outputs": [],
    "source": [
     "# API Processes - Get Application Details\n",
-    "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, application_name, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, application_name, id_token=eric_id_token, access_token=ades_access_token)\n",
     "demo.response_summary(response)"
    ]
   },
@@ -656,7 +657,7 @@
    "outputs": [],
    "source": [
     "# API Processes - Execute Application\n",
-    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, application_name, \"../data/app-execute-body.json\", id_token=user_id_token, access_token=ades_access_token)"
+    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, application_name, \"../data/app-execute-body.json\", id_token=eric_id_token, access_token=ades_access_token)"
    ]
   },
   {
@@ -691,7 +692,7 @@
    "outputs": [],
    "source": [
     "# API Processes - Job Status\n",
-    "response, ades_access_token, status = demo.proc_get_job_status(ades_base_url, job_location_path, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, status = demo.proc_get_job_status(ades_base_url, job_location_path, id_token=eric_id_token, access_token=ades_access_token)\n",
     "demo.response_summary(response)"
    ]
   },
@@ -713,7 +714,7 @@
    "outputs": [],
    "source": [
     "# API Processes - Job Status (keep polling for completion)\n",
-    "response, ades_access_token, status = demo.proc_poll_job_completion(ades_base_url, job_location_path, interval=10, id_token=user_id_token, access_token=ades_access_token)"
+    "response, ades_access_token, status = demo.proc_poll_job_completion(ades_base_url, job_location_path, interval=10, id_token=eric_id_token, access_token=ades_access_token)"
    ]
   },
   {
@@ -756,7 +757,7 @@
    "outputs": [],
    "source": [
     "# API Processes - Job Result\n",
-    "response, ades_access_token, stacCatalogUri = demo.proc_get_job_result(ades_base_url, job_location_path, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, stacCatalogUri = demo.proc_get_job_result(ades_base_url, job_location_path, id_token=eric_id_token, access_token=ades_access_token)\n",
     "demo.response_summary(response)\n",
     "print(\"stacCatalogUri:\", stacCatalogUri)"
    ]
@@ -789,8 +790,8 @@
     "workspace_access_token = None\n",
     "\n",
     "# Workspace - Get Details\n",
-    "workspace_name = f\"{workspace_prefix}-{USER_NAME.lower()}\"\n",
-    "response, workspace_access_token = demo.workspace_get_details(workspace_url, workspace_name, id_token=user_id_token, access_token=workspace_access_token)\n",
+    "workspace_name = f\"{workspace_prefix}-{USER_ERIC.lower()}\"\n",
+    "response, workspace_access_token = demo.workspace_get_details(workspace_url, workspace_name, id_token=eric_id_token, access_token=workspace_access_token)\n",
     "workspace_details = response.json()\n",
     "demo.response_summary(response)\n",
     "\n",
@@ -872,7 +873,7 @@
    "outputs": [],
    "source": [
     "# API Processes - List Jobs\n",
-    "response, ades_access_token, job_ids = demo.proc_list_jobs(ades_proc_url, application_name, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, job_ids = demo.proc_list_jobs(ades_proc_url, application_name, id_token=eric_id_token, access_token=ades_access_token)\n",
     "print(\"Jobs:\", job_ids)"
    ]
   },
@@ -894,7 +895,7 @@
    "outputs": [],
    "source": [
     "# API Processes - Undeploy Application\n",
-    "response, ades_access_token = demo.proc_undeploy_application(ades_proc_url, application_name, id_token=user_id_token, access_token=ades_access_token)"
+    "response, ades_access_token = demo.proc_undeploy_application(ades_proc_url, application_name, id_token=eric_id_token, access_token=ades_access_token)"
    ]
   },
   {
@@ -907,7 +908,7 @@
    "outputs": [],
    "source": [
     "# Check undeploy - list processes\n",
-    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=eric_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)"
    ]
   },
@@ -947,7 +948,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_NAME}.{base_domain}'\n",
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}'\n",
     "print(f\"Eric's workspace (catalogue): {workspace_endpoint}\")\n",
     "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
@@ -1046,7 +1047,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_map(wms,scene_id,(13.8,36.9,15.1,37.9), 'rgb.png',style='viridis')\n",
+    "layer = \"\"\n",
+    "get_map(wms,f\"{scene_id}{layer}\",(13.8,36.9,15.1,37.9), 'rgb.png',style='viridis')\n",
     "image1 = mpimg.imread('rgb.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
     "img1 = plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
@@ -1106,9 +1108,9 @@
    },
    "outputs": [],
    "source": [
-    "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl.json\", id_token=user_id_token, access_token=ades_access_token)\n",
-    "application_uri = f\"/{USER_NAME}/wps3/processes/{application_name}\"\n",
-    "demo.reset_resource_policy(ades_resources_endpoint, pdp_url, user_id_token, application_uri) # due to previous runs of the demo"
+    "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl.json\", id_token=eric_id_token, access_token=ades_access_token)\n",
+    "application_uri = f\"/{USER_ERIC}/wps3/processes/{application_name}\"\n",
+    "demo.reset_resource_policy(ades_resources_endpoint, pdp_url, eric_id_token, application_uri) # due to previous runs of the demo"
    ]
   },
   {
@@ -1238,7 +1240,7 @@
     "#-------------------------------------------------------------------------------\n",
     "# Get Subject IDs from user JWT ID tokens\n",
     "#-------------------------------------------------------------------------------\n",
-    "eric_identifier = demo.get_ownership_id(user_id_token)\n",
+    "eric_identifier = demo.get_ownership_id(eric_id_token)\n",
     "bob_identifier = demo.get_ownership_id(bob_id_token)\n",
     "print(f\"Subject IDs: Eric => {eric_identifier}, Bob => {bob_identifier}\")"
    ]
@@ -1260,8 +1262,8 @@
    "outputs": [],
    "source": [
     "# Each resource has a unique identifier\n",
-    "application_resource_id = demo.get_resource_by_uri(ades_resources_endpoint, application_uri, user_id_token)\n",
-    "print(f\"ID for resource '{application_uri}' of user {USER_NAME} => {application_resource_id}\")"
+    "application_resource_id = demo.get_resource_by_uri(ades_resources_endpoint, application_uri, eric_id_token)\n",
+    "print(f\"ID for resource '{application_uri}' of user {USER_ERIC} => {application_resource_id}\")"
    ]
   },
   {
@@ -1309,7 +1311,7 @@
     "  ]\n",
     "}\n",
     "\n",
-    "response, text = demo.update_policy(pdp_url, policy, application_resource_id, user_id_token)"
+    "response, text = demo.update_policy(pdp_url, policy, application_resource_id, eric_id_token)"
    ]
   },
   {
