EOEPCA-289 add cleanup at end of demo script - to reset for next time

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -1336,6 +1336,40 @@
     "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, application_name, id_token=bob_id_token, access_token=ades_access_token)\n",
     "demo.response_summary(response)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d06b1b6e-f892-4d22-85b4-93b0917ce54c",
+   "metadata": {},
+   "source": [
+    "### Cleanup - Undeploy Application\n",
+    "Undeploy application from the ADES - ready for next demo run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9654e7bf-ba38-4582-8b9b-0869f68bf73b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Processes - Undeploy Application\n",
+    "response, ades_access_token = demo.proc_undeploy_application(ades_proc_url, application_name, id_token=eric_id_token, access_token=ades_access_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "858b97d4-5e7f-44b5-91b5-5dd585bc5cd5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Check undeploy - list processes\n",
+    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=eric_id_token, access_token=ades_access_token)\n",
+    "print(\"Processes:\", process_ids)"
+   ]
   }
  ],
  "metadata": {
