Update demo notebook for develop deployment

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -20,6 +20,7 @@
     "import os\n",
     "import jwt\n",
     "import json\n",
+    "from datetime import datetime\n",
     "import boto3\n",
     "from awscli.customizations.s3.utils import split_s3_bucket_key\n",
     "\n",
@@ -57,10 +58,10 @@
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
-    "#base_domain = \"185.52.193.87.nip.io\"\n",
-    "#workspace_prefix = \"rm-user\"\n",
-    "base_domain = \"demo.eoepca.org\"\n",
-    "workspace_prefix = \"demo-user\"\n",
+    "base_domain = \"185.52.193.87.nip.io\"\n",
+    "workspace_prefix = \"rm-user\"\n",
+    "#base_domain = \"demo.eoepca.org\"\n",
+    "#workspace_prefix = \"demo-user\"\n",
     "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
     "demo.register_client()\n",
     "demo.save_state()"
@@ -134,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alice_workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-alice.{base_domain}'\n",
+    "alice_workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-alice.{base_domain}/csw'\n",
     "csw = CatalogueServiceWeb(alice_workspace_endpoint,timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "print(\"Alice's workspace records:\\n\")\n",
@@ -198,7 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
+    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}/csw'\n",
+    "print(system_catalogue_endpoint)\n",
     "csw = CatalogueServiceWeb(system_catalogue_endpoint, timeout=30)"
    ]
   },
