Corrected CSW path in user's workspace

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -950,7 +950,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}'\n",
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}/csw'\n",
     "print(f\"Eric's workspace (catalogue): {workspace_endpoint}\")\n",
     "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
