Updating Resource Catalogue demo from 03 Demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -30,6 +30,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a226f882-ef75-477b-a927-61a24b9202e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"185.52.193.87.nip.io\"\n",
+    "#base_domain = \"demo.eoepca.org\"\n",
+    "#workspace_prefix = \"demo-user\"\n",
+    "workspace_prefix = \"user\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a86c43c6-0b46-4c55-8baa-f1d0da46c2c6",
    "metadata": {},
@@ -53,8 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#system_endpoint = 'https://resource-catalogue.185.52.193.87.nip.io/'\n",
-    "system_endpoint = 'https://resource-catalogue.demo.eoepca.org/'"
+    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}/csw'"
    ]
   },
   {
@@ -64,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw = CatalogueServiceWeb(system_endpoint, timeout=30)"
+    "csw = CatalogueServiceWeb(system_catalogue_endpoint, timeout=30)"
    ]
   },
   {
@@ -179,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "begin = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal='2021-04-02 00:00')"
+    "begin = PropertyIsGreaterThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal='2021-04-02 00:00')"
    ]
   },
   {
@@ -189,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "end = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal='2021-04-02 23:59')"
+    "end = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal='2021-04-03 00:00')"
    ]
   },
   {
@@ -237,6 +249,16 @@
    "source": [
     "csw.getrecords2(constraints=filter_list, outputschema='http://www.isotc211.org/2005/gmd')\n",
     "csw.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0418bd08-debe-405d-8527-7a9ea59ed677",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_record = list(csw.records)[0]"
    ]
   },
   {
@@ -391,7 +413,7 @@
    "outputs": [],
    "source": [
     "#csw.getrecordbyid(id=['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'])\n",
-    "csw.getrecordbyid(id=['S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'])"
+    "csw.getrecordbyid(id=[selected_record])"
    ]
   },
   {
@@ -402,7 +424,7 @@
    "outputs": [],
    "source": [
     "#rec = csw.records['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE']\n",
-    "rec = csw.records['S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE']"
+    "rec = csw.records[selected_record]"
    ]
   },
   {
@@ -540,7 +562,8 @@
    "source": [
     "#workspace_endpoint = 'https://resource-catalogue.user.185.52.193.87.nip.io'\n",
     "#workspace_endpoint = 'https://resource-catalogue.user.demo.eoepca.org'\n",
-    "workspace_endpoint = 'https://resource-catalogue.rm-user-eric.185.52.193.87.nip.io'"
+    "#workspace_endpoint = 'https://resource-catalogue.rm-user-eric.185.52.193.87.nip.io'\n",
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}.{base_domain}/csw'"
    ]
   },
   {
@@ -645,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint='http://resource-catalogue.185.52.193.87.nip.io/?service=CSW&version=3.0.0&request=GetCapabilities&mode=opensearch'"
+    "endpoint = system_catalogue_endpoint + '?service=CSW&version=3.0.0&request=GetCapabilities&mode=opensearch'"
    ]
   },
   {
@@ -827,7 +850,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url='https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record'\n",
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
@@ -848,7 +871,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url='https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&eo:parentIdentifier=S2MSI2A'\n",
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&eo:parentIdentifier=S2MSI2A'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
@@ -869,7 +892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url='https://resource-catalogue.user.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record'\n",
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
@@ -890,7 +913,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url='https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
@@ -911,7 +934,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url='https://resource-catalogue.user.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&typenames=csw:Record&elementsetname=full&resulttype=results&distributedSearch=TRUE&hopcount=1'\n",
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&typenames=csw:Record&elementsetname=full&resulttype=results&distributedSearch=TRUE&hopcount=1'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
@@ -923,6 +946,24 @@
    "metadata": {},
    "source": [
     "Please note in the above result that the total of records is a combination of the system and workspace catalogues."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71406579-3e11-41a0-99d0-f92d137d75b6",
+   "metadata": {},
+   "source": [
+    "### OGC API Records demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "518428c6-5cb0-41de-8578-b92c40466315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'"
    ]
   },
   {
@@ -1134,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
