Added OGC API Records demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "from owslib.csw import CatalogueServiceWeb\n",
+    "from owslib.ogcapi.records import Records\n",
     "from owslib.fes import And, Or, PropertyIsEqualTo, PropertyIsGreaterThanOrEqualTo, PropertyIsLessThanOrEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
     "from geolinks import sniff_link\n",
     "import folium"
@@ -957,6 +958,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b782e936-a4f5-4c42-8f61-749f9f754765",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will use the system level resource catalogue OGC API Records endpoint to discover data datasets.\n",
+    "The `owslib.ogcapi.records` class of OWSLib is instantiated and service metadata are shown."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "518428c6-5cb0-41de-8578-b92c40466315",
@@ -964,6 +974,166 @@
    "outputs": [],
    "source": [
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "108316b8-a2fa-4982-bcc3-219c4419c88f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = Records(system_catalogue_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef7701a1-c8c7-4a6a-9e89-2f33ab458869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e477c07-965a-444e-8577-9b222c32b90c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.conformance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59acaa0f-8070-4415-9676-b63c60e76731",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.api()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550a52de-2b02-4d47-b0de-0cf8f73c12b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.collections()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f48e1e0a-2322-4d3a-abb6-6911ed755213",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = w.records()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a854ad77-23f8-4e3a-9bf3-663e245a53c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fe1b3ef-3cf4-4e6a-9bb4-5c6c500098ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue = w.collection('metadata:main')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62b043a6-e2f5-4b4b-9bab-1512217760fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d367eff4-ad5b-4fc0-a2cd-db464277a320",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.collection_queryables('metadata:main')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "610888de-980a-40ba-8958-719ccf6cb835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = w.collection_items('metadata:main')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9564c479-6760-4377-a85c-358d55401f71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query['features'][0]['properties'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43df443c-072f-41ba-9f9f-9fbf40a95256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query['features'][0]['properties']['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "079e181c-6332-429b-99b7-11c302f09a3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query2 = w.collection_items('metadata:main', q='Orthoimagery')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbc24506-4a77-4fb1-95fa-1a9b031d5b4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query2['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d5384be-3bfb-43da-a88e-f13f5ddeb264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query2"
    ]
   },
   {
